--- a/music-player.html
+++ b/music-player.html
@@ -8,26 +8,26 @@
         <title>Music Player</title>
     </head>
     <body>
-        <div>
-            <div class="box-border m-0 font-sans">
-                <p>Title</p>
-                <p>Artist</p>
+        <div class="mx-12 my-14">
+            <div class="">
+                <p id="current-song-title" class="text-[48px]">Title</p>
+                <p id="current-song-artist" class="text-[36px]">Artist</p>
             </div>
-            <a href="#" class="player-record" id="player-record">
+            <a href="#" class="player-record ml-32" id="player-record">
                 <svg width="360" height="360" viewBox="0 0 720 720">
                     <circle cx="360" cy="360" r="360"></circle>
                 </svg>
             </a>
-            <!-- <div class="player-progess-bar">
+            <!-- <div id="player-progess-bar">
                     <svg></svg>
             </div> -->
-            <div class="flex items-center">
+            <div class="flex items-center my-14 space-x-20">
                 <button href="#" class="player-buttons" id="player-shuffle">
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="28"
                         height="25"
-                        viewBox="0 0 30 30"
+                        viewBox="0 0 28 25"
                         fill="none"
                     >
                         <path
@@ -36,7 +36,7 @@
                         />
                     </svg>
                 </button>
-                <div>
+                <div class="flex items-center space-x-4">
                     <button
                         href="#"
                         class="player-buttons"
@@ -46,7 +46,7 @@
                             xmlns="http://www.w3.org/2000/svg"
                             width="30"
                             height="30"
-                            viewBox="0 0 35 35"
+                            viewBox="0 0 27 33"
                             fill="none"
                         >
                             <path
@@ -60,7 +60,7 @@
                             xmlns="http://www.w3.org/2000/svg"
                             width="30"
                             height="30"
-                            viewBox="0 0 35 35"
+                            viewBox="0 0 28 33"
                             fill="none"
                         >
                             <path
@@ -74,7 +74,7 @@
                             xmlns="http://www.w3.org/2000/svg"
                             width="30"
                             height="30"
-                            viewBox="0 0 35 35"
+                            viewBox="0 0 27 33"
                             fill="none"
                         >
                             <path
@@ -89,7 +89,7 @@
                         xmlns="http://www.w3.org/2000/svg"
                         width="27"
                         height="25"
-                        viewBox="0 0 30 30"
+                        viewBox="0 0 27 25"
                         fill="none"
                     >
                         <path
