--- a/music-player.html
+++ b/music-player.html
@@ -8,7 +8,7 @@
         <title>Music Player</title>
     </head>
     <body>
-        <div class="mx-12 my-14">
+        <div class="mx-12 my-14" id="music-player">
             <div class="">
                 <p id="current-song-title" class="text-[48px]">Title</p>
                 <p id="current-song-artist" class="text-[36px]">Artist</p>
