Update Artist more button

--- a/index.html
+++ b/index.html
@@ -423,8 +423,7 @@
                     </div>
                     <div id="album-subsection" class="mb-8">
                         <h3 class="text-3xl font-bold mb-4">Albums</h3>
-                        <div
-                            class="w-fit flex flex-row justify-start items-center border-4">
+                        <div class="w-fit flex flex-row justify-start items-center">
                             <div
                                 id="albums-preview"
                                 class="library-item-preview flex flex-row items-start gap-x-4 mr-4">
@@ -765,12 +764,12 @@
                                     </div>
                                 </div> -->
                             </div>
-                            <!-- <button
+                            <button
                                 type="button"
                                 class="more-button px-2 h-fit w-16 text-base border-2 border-black rounded-full bg-white hover:bg-green-300"
                                 onclick="">
                                 More
-                            </button> -->
+                            </button>
                         </div>
                     </div>
                 </div>
