Update library grid scroll bar

--- a/index.html
+++ b/index.html
@@ -82,12 +82,11 @@
                                 Liked Songs
                             </h2>
                         </header>
-                        <div
-                            class="library-controls flex items-center">
+                        <div class="library-controls flex items-center">
                             <div
                                 class="libraryControls-play flex flex-row mx-2 items-center gap-x-4">
                                 <div
-                                    class="libraryControlsPlay-playButton  fill-black hover:fill-green-400 hover:cursor-pointer">
+                                    class="libraryControlsPlay-playButton fill-black hover:fill-green-400 hover:cursor-pointer">
                                     <svg
                                         xmlns="http://www.w3.org/2000/svg"
                                         width="50"
@@ -388,7 +387,7 @@
             <!-- 4. section -->
             <div
                 id="content-section"
-                class="row-span-3 border-4 border-black col-span-2 rounded-md p-4 overflow-x-scroll">
+                class="row-span-3 border-4 border-black col-span-2 rounded-md p-4 overflow-y-scroll">
                 <!-- 4.a Library Interface -->
                 <div id="library-subsection" class="active">
                     <div id="liked-songs-area" class="mb-8">
