Remove hyperlinks to artist page

--- a/index.html
+++ b/index.html
@@ -535,11 +535,10 @@
                                             class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                             Title
                                         </p>
-                                        <a
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                            onclick="changeContent('artist')">
+                                        <p
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                             Artist
-                                        </a>
+                                        </p>
                                     </div>
                                 </div>
                                 <div
@@ -553,11 +552,10 @@
                                             class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                             Title
                                         </p>
-                                        <a
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                            onclick="changeContent('artist')">
+                                        <p
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                             Artist
-                                        </a>
+                                        </p>
                                     </div>
                                 </div>
                                 <div
@@ -571,11 +569,10 @@
                                             class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                             Title
                                         </p>
-                                        <a
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                            onclick="changeContent('artist')">
+                                        <p
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                             Artist
-                                        </a>
+                                        </p>
                                     </div>
                                 </div>
                                 <div
@@ -589,11 +586,10 @@
                                             class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                             Title
                                         </p>
-                                        <a
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                            onclick="changeContent('artist')">
+                                        <p
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                             Artist
-                                        </a>
+                                        </p>
                                     </div>
                                 </div>
                                 <div
@@ -607,11 +603,10 @@
                                             class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                             Title
                                         </p>
-                                        <a
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                            onclick="changeContent('artist')">
+                                        <p
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                             Artist
-                                        </a>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -748,11 +743,10 @@
                                             class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                             Title
                                         </p>
-                                        <a
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                            onclick="changeContent('artist')">
+                                        <p
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                             Artist
-                                        </a>
+                                        </p>
                                     </div>
                                 </div>
                                 <div
@@ -767,11 +761,10 @@
                                             class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                             Title
                                         </p>
-                                        <a
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                            onclick="changeContent('artist')">
+                                        <p
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                             Artist
-                                        </a>
+                                        </p>
                                     </div>
                                 </div>
                                 <div
@@ -786,11 +779,10 @@
                                             class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                             Title
                                         </p>
-                                        <a
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                            onclick="changeContent('artist')">
+                                        <p
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                             Artist
-                                        </a>
+                                        </p>
                                     </div>
                                 </div>
                                 <div
@@ -805,11 +797,10 @@
                                             class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                             Title
                                         </p>
-                                        <a
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                            onclick="changeContent('artist')">
+                                        <p
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                             Artist
-                                        </a>
+                                        </p>
                                     </div>
                                 </div>
                                 <div
@@ -824,11 +815,10 @@
                                             class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                             Title
                                         </p>
-                                        <a
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                            onclick="changeContent('artist')">
+                                        <p
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                             Artist
-                                        </a>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -943,11 +933,10 @@
                                     class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                     Title
                                 </p>
-                                <a
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                    onclick="changeContent('artist')">
+                                <p
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                     Artist
-                                </a>
+                                </p>
                             </div>
                         </div>
                         <div
@@ -961,11 +950,10 @@
                                     class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                     Title
                                 </p>
-                                <a
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                    onclick="changeContent('artist')">
+                                <p
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                     Artist
-                                </a>
+                                </p>
                             </div>
                         </div>
                         <div
@@ -979,11 +967,10 @@
                                     class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                     Title
                                 </p>
-                                <a
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                    onclick="changeContent('artist')">
+                                <p
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                     Artist
-                                </a>
+                                </p>
                             </div>
                         </div>
                         <div
@@ -997,11 +984,10 @@
                                     class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                     Title
                                 </p>
-                                <a
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                    onclick="changeContent('artist')">
+                                <p
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                     Artist
-                                </a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -1048,11 +1034,10 @@
                                     class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
                                     Title
                                 </p>
-                                <a
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400"
-                                    onclick="changeContent('artist')">
+                                <p
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
                                     Artist
-                                </a>
+                                </p>
                             </div>
                         </div>
                     </div>
