--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <button
                                 id="library-button"
                                 class="text-white bg-black border-4 border-black hover:bg-green-300 hover:text-black py-1 px-2 rounded-md"
-                                onclick="changeContent('library')">
+                                onclick="changeContent('library', null)">
                                 Library
                             </button>
                         </li>
@@ -161,7 +161,7 @@
                             <button
                                 id="friends-button"
                                 class="text-white bg-black border-4 border-black hover:bg-green-300 hover:text-black py-1 px-2 rounded-md"
-                                onclick="changeContent('friends')">
+                                onclick="changeContent('friends', null)">
                                 Friends
                             </button>
                         </li>
@@ -171,7 +171,7 @@
                             <button
                                 id="settings-button"
                                 class="text-white bg-black border-4 border-black hover:bg-green-300 hover:text-black py-1 px-2 rounded-md"
-                                onclick="changeContent('settings')">
+                                onclick="changeContent('settings', null)">
                                 Settings
                             </button>
                         </li>
@@ -189,7 +189,7 @@
                         <header class="flex flex-row items-center gap-6">
                             <button
                                 class="libraryPage-backButton fill-black hover:cursor-pointer hover:fill-green-400"
-                                onclick="changeContent('library')">
+                                onclick="changeContent('back', null)">
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     width="36"
@@ -253,7 +253,7 @@
                         <header class="flex flex-row items-center gap-6">
                             <button
                                 class="libraryPage-backButton pt-2 fill-black hover:cursor-pointer hover:fill-green-400"
-                                onclick="changeContent('playlists')">
+                                onclick="changeContent('back', null)">
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     width="36"
@@ -318,7 +318,7 @@
                         <header class="flex flex-row items-center gap-6">
                             <button
                                 class="libraryPage-backButton pt-2 fill-black hover:cursor-pointer hover:fill-green-400"
-                                onclick="changeContent('albums')">
+                                onclick="changeContent('back', null)">
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     width="36"
@@ -383,7 +383,7 @@
                         <header class="flex flex-row items-center gap-6">
                             <button
                                 class="libraryPage-backButton pt-2 fill-black hover:cursor-pointer hover:fill-green-400"
-                                onclick="changeContent('library')">
+                                onclick="changeContent('back', null)">
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     width="36"
@@ -413,7 +413,7 @@
                         <header class="flex flex-row items-center gap-6">
                             <button
                                 class="libraryPage-backButton pt-2 fill-black hover:cursor-pointer hover:fill-green-400"
-                                onclick="changeContent('library')">
+                                onclick="changeContent('back', null)">
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     width="36"
@@ -443,7 +443,7 @@
                         <header class="flex flex-row items-center gap-6">
                             <button
                                 class="libraryPage-backButton pt-2 fill-black hover:cursor-pointer hover:fill-green-400"
-                                onclick="changeContent('library')">
+                                onclick="changeContent('back', null)">
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     width="36"
@@ -473,7 +473,7 @@
                         <header class="flex flex-row items-center gap-6">
                             <button
                                 class="libraryPage-backButton pt-2 fill-black hover:cursor-pointer hover:fill-green-400"
-                                onclick="changeContent('artists')">
+                                onclick="changeContent('back', null)">
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     width="36"
@@ -613,7 +613,7 @@
                             <button
                                 type="button"
                                 class="more-button px-2 h-fit w-16 text-base border-2 border-black rounded-full bg-white hover:bg-green-300"
-                                onclick="changeContent('liked-songs')">
+                                onclick="changeContent('liked-songs', 'library')">
                                 More
                             </button>
                         </div>
@@ -627,7 +627,7 @@
                                 class="library-item-preview flex flex-row items-start gap-x-4 mr-4">
                                 <div
                                     class="library-libraryItem libraryItem-playlist hover:cursor-pointer"
-                                    onclick="changeContent('playlist')">
+                                    onclick="changeContent('playlist', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Album cover"
@@ -645,7 +645,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-playlist hover:cursor-pointer"
-                                    onclick="changeContent('playlist')">
+                                    onclick="changeContent('playlist', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Album cover"
@@ -663,7 +663,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-playlist hover:cursor-pointer"
-                                    onclick="changeContent('playlist')">
+                                    onclick="changeContent('playlist', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Album cover"
@@ -681,7 +681,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-playlist hover:cursor-pointer extra-1 hidden md:block"
-                                    onclick="changeContent('playlist')">
+                                    onclick="changeContent('playlist', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Album cover"
@@ -699,7 +699,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-playlist hover:cursor-pointer extra-2 hidden lg:block"
-                                    onclick="changeContent('playlist')">
+                                    onclick="changeContent('playlist', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Album cover"
@@ -719,7 +719,7 @@
                             <button
                                 type="button"
                                 class="more-button px-2 h-fit w-16 text-base border-2 border-black rounded-full bg-white hover:bg-green-300"
-                                onclick="changeContent('playlists')">
+                                onclick="changeContent('playlists', 'library')">
                                 More
                             </button>
                         </div>
@@ -733,7 +733,7 @@
                                 class="library-item-preview flex flex-row items-start gap-x-4 mr-4">
                                 <div
                                     class="library-libraryItem libraryItem-album hover:cursor-pointer"
-                                    onclick="changeContent('album')">
+                                    onclick="changeContent('album', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Album cover"
@@ -751,7 +751,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-album hover:cursor-pointer"
-                                    onclick="changeContent('album')">
+                                    onclick="changeContent('album', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Album cover"
@@ -769,7 +769,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-album hover:cursor-pointer"
-                                    onclick="changeContent('album')">
+                                    onclick="changeContent('album', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Album cover"
@@ -787,7 +787,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-album hover:cursor-pointer extra-1 hidden md:block"
-                                    onclick="changeContent('album')">
+                                    onclick="changeContent('album', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Album cover"
@@ -805,7 +805,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-album hover:cursor-pointer extra-2 hidden lg:block"
-                                    onclick="changeContent('album')">
+                                    onclick="changeContent('album', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Album cover"
@@ -825,7 +825,7 @@
                             <button
                                 type="button"
                                 class="more-button px-2 h-fit w-16 text-base border-2 border-black rounded-full bg-white hover:bg-green-300"
-                                onclick="changeContent('albums')">
+                                onclick="changeContent('albums', 'library')">
                                 More
                             </button>
                         </div>
@@ -839,7 +839,7 @@
                                 class="library-item-preview flex flex-row items-start gap-x-4 mr-4">
                                 <div
                                     class="library-libraryItem libraryItem-artist hover:cursor-pointer"
-                                    onclick="changeContent('artist')">
+                                    onclick="changeContent('artist', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Artist profile picture"
@@ -853,7 +853,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-artist hover:cursor-pointer"
-                                    onclick="changeContent('artist')">
+                                    onclick="changeContent('artist', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Artist profile picture"
@@ -867,7 +867,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-artist hover:cursor-pointer"
-                                    onclick="changeContent('artist')">
+                                    onclick="changeContent('artist', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Artist profile picture"
@@ -881,7 +881,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-artist hover:cursor-pointer extra-1 hidden md:block"
-                                    onclick="changeContent('artist')">
+                                    onclick="changeContent('artist', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Artist profile picture"
@@ -895,7 +895,7 @@
                                 </div>
                                 <div
                                     class="library-libraryItem libraryItem-artist hover:cursor-pointer extra-2 hidden lg:block"
-                                    onclick="changeContent('artist')">
+                                    onclick="changeContent('artist', 'library')">
                                     <img
                                         src="/assets/song-cover.jpg"
                                         alt="Artist profile picture"
@@ -911,7 +911,7 @@
                             <button
                                 type="button"
                                 class="more-button px-2 h-fit w-16 text-base border-2 border-black rounded-full bg-white hover:bg-green-300"
-                                onclick="changeContent('artists')">
+                                onclick="changeContent('artists', 'library')">
                                 More
                             </button>
                         </div>
@@ -999,7 +999,7 @@
                         class="library-grid grid grid-cols-3 md:grid-cols-6 lg:grid-cols-8 xl:grid-cols-10 gap-10">
                         <div
                             class="library-libraryItem libraryItem-playlist hover:cursor-pointer"
-                            onclick="changeContent('playlist')">
+                            onclick="changeContent('playlist', 'playlists')">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
@@ -1024,7 +1024,7 @@
                         class="library-grid grid grid-cols-3 md:grid-cols-6 lg:grid-cols-8 xl:grid-cols-10 gap-10">
                         <div
                             class="library-libraryItem libraryItem-album hover:cursor-pointer"
-                            onclick="changeContent('album')">
+                            onclick="changeContent('album', 'albums')">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
@@ -1049,7 +1049,7 @@
                         class="library-grid grid grid-cols-3 md:grid-cols-6 lg:grid-cols-8 xl:grid-cols-10 gap-10">
                         <div
                             class="library-libraryItem libraryItem-artist hover:cursor-pointer"
-                            onclick="changeContent('artist')">
+                            onclick="changeContent('artist', 'artists')">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Artist profile picture"
@@ -1064,14 +1064,39 @@
                     </div>
                 </div>
 
+                <!-- 4.a.v artist discography -->
+                <div id="discography-subsection" class="hidden">
+                    <div
+                        class="library-grid grid grid-cols-3 md:grid-cols-6 lg:grid-cols-8 xl:grid-cols-10 gap-10">
+                        <div
+                            class="library-libraryItem libraryItem-album hover:cursor-pointer"
+                            onclick="changeContent('album', 'artist')">
+                            <img
+                                src="/assets/song-cover.jpg"
+                                alt="Album cover"
+                                class="library-libraryItem-cover w-28 mb-4 rounded" />
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
+                                    Title
+                                </p>
+                                <p
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                    Artist
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- 4.b Friends Interface-->
                 <div id="friends-subsection" class="hidden">
-                    <h2 class="text-xl font-bold">Friends Subsection</h2>
+                    <h2 class="text-xl font-bold">Friends page not implemented.</h2>
                 </div>
 
                 <!-- 4.c Settings Interface -->
                 <div id="settings-subsection" class="hidden">
-                    <h2 class="text-xl font-bold">Settings Subsection</h2>
+                    <h2 class="text-xl font-bold">Settings page not implemented.</h2>
                 </div>
             </div>
         </div>
