Remove hyperlink appearance of library item labels

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                                             Title
                                         </p>
                                         <p
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                             Artist
                                         </p>
                                     </div>
@@ -553,7 +553,7 @@
                                             Title
                                         </p>
                                         <p
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                             Artist
                                         </p>
                                     </div>
@@ -570,7 +570,7 @@
                                             Title
                                         </p>
                                         <p
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                             Artist
                                         </p>
                                     </div>
@@ -587,7 +587,7 @@
                                             Title
                                         </p>
                                         <p
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                             Artist
                                         </p>
                                     </div>
@@ -604,7 +604,7 @@
                                             Title
                                         </p>
                                         <p
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                             Artist
                                         </p>
                                     </div>
@@ -744,7 +744,7 @@
                                             Title
                                         </p>
                                         <p
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                             Artist
                                         </p>
                                     </div>
@@ -762,7 +762,7 @@
                                             Title
                                         </p>
                                         <p
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                             Artist
                                         </p>
                                     </div>
@@ -780,7 +780,7 @@
                                             Title
                                         </p>
                                         <p
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                             Artist
                                         </p>
                                     </div>
@@ -798,7 +798,7 @@
                                             Title
                                         </p>
                                         <p
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                             Artist
                                         </p>
                                     </div>
@@ -816,7 +816,7 @@
                                             Title
                                         </p>
                                         <p
-                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                            class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                             Artist
                                         </p>
                                     </div>
@@ -934,7 +934,7 @@
                                     Title
                                 </p>
                                 <p
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                     Artist
                                 </p>
                             </div>
@@ -951,7 +951,7 @@
                                     Title
                                 </p>
                                 <p
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                     Artist
                                 </p>
                             </div>
@@ -968,7 +968,7 @@
                                     Title
                                 </p>
                                 <p
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                     Artist
                                 </p>
                             </div>
@@ -985,7 +985,7 @@
                                     Title
                                 </p>
                                 <p
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                     Artist
                                 </p>
                             </div>
@@ -1035,7 +1035,7 @@
                                     Title
                                 </p>
                                 <p
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                     Artist
                                 </p>
                             </div>
@@ -1081,7 +1081,7 @@
                                     Title
                                 </p>
                                 <p
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg hover:text-green-400">
+                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg">
                                     Artist
                                 </p>
                             </div>
