--- a/index.html
+++ b/index.html
@@ -12,11 +12,62 @@
         <!-- main container -->
         <div class="main-container grid h-screen grid-rows-4 grid-flow-col gap-2 p-2">
             <!-- 1. music player -->
-            <div
-                class="music-player-container row-span-3 col-span-2 border-4 border-black rounded-md"></div>
+            <div id ="music-player-container"
+                class="row-span-3 col-span-2 border-4 border-black rounded-md"></div>
             <!-- 2. queue -->
-            <div
-                class="queue-container row-span-1 col-span-2 border-4 border-black rounded-md"></div>
+            <div id="queue-container" class=" row-span-1 col-span-2 border-4 border-black rounded-md">
+                <!-- Home Page Queue -->
+                <ul id="small-queue" class=" active">
+                <li class="item1">item1</li>
+                <li class="item2">item2</li>
+                <li class="item3">item3</li>
+                </ul>
+
+                <button id="expandButton" class="active" onclick="expandQueue()">More</button>
+                <!-- Expanded Queue -->
+                <div id="expanded-queue" class="hidden">
+                    <!--Queue Header-->
+                    <div class="ml-4">
+                        <header class="queue_navBar flex flex-row items-center gap-6 mb-8 mt-5">
+                            <button
+                                class="queuePage-backButton pt-2 fill-black hover:fill-blue-400"
+                                onclick="backToHome()"> 
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="32"
+                                    height="26"
+                                    viewBox="0 0 32 30">
+                                    <path
+                                        d="M34 17C35.1046 17 36 16.1046 36 15C36 13.8954 35.1046 13 34 13L34 17ZM0.585786 13.5858C-0.195262 14.3668 -0.195262 15.6332 0.585786 16.4142L13.3137 29.1421C14.0948 29.9232 15.3611 29.9232 16.1421 29.1421C16.9232 28.3611 16.9232 27.0948 16.1421 26.3137L4.82843 15L16.1421 3.68629C16.9232 2.90524 16.9232 1.63891 16.1421 0.857864C15.3611 0.0768159 14.0948 0.0768159 13.3137 0.857864L0.585786 13.5858ZM34 13L2 13L2 17L34 17L34 13Z" />
+                                </svg>
+                            </button>
+                            <h2 id="queueTitle" class=" text-3xl mr-4 ">
+                                Queue
+                            </h2>
+                        </header>
+                    </div>
+
+                    <!--Queued Songs-->
+                    <div class="flex flex-row">
+                        <div class="w-full ml-4 mr-4">
+                            <!-- Queued Songs Container -->
+                            <div >
+                                <!-- Song Boxes -->
+                                <div id="songBoxes"> </div>
+                            </div>
+                             <!--Clear Button-->
+                            <button id="clearButton" 
+                                class="flex items-center justify-center w-full h-10 border-2 border-gray-800 hover:border-blue-400  hover:text-blue-400 " onclick="clickedClear()" > 
+                                CLEAR
+                            </button>
+                        </div>
+                    </div>
+
+                   
+                </div>
+                
+            </div>
+
 
             <!-- 3. bars container -->
             <div class="bars-container grid grid-rows-2 col-span-2 rounded-md gap-2">
@@ -1197,5 +1248,6 @@
         </div>
 
         <script src="script.js"></script>
+        <script src="queue.js"></script>
     </body>
 </html>
