--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
-        <script src="style.css"></script>
-        <script src=""></script>
+        <link rel="stylesheet" href="style.css" />
         <title>VinylMusic</title>
     </head>
     <body>
@@ -30,7 +29,7 @@
                             id="player-record"
                             src="/assets/song-cover.jpg"
                             alt="Song Cover Disk"
-                            class="w-full rounded-full h-full" />
+                            class="w-full rounded-full player-rotation" />
                         <!-- volume bar -->
                         <div
                             id="player-volume-bar"
@@ -1160,7 +1159,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- <script src="music-player.js"></script> -->
         <script src="script.js"></script>
     </body>
 </html>
