--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
                     <div
                         class="library-grid grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-8 gap-x-4 gap-y-2 lg:gap-y-8">
                         <div
-                            class="library-libraryItem libraryItem-song grid-song border-2 border-black w-5/6 md:w-full p-2 hover:cursor-pointer hover:bg-green-100">
+                            class="library-libraryItem libraryItem-song grid-song w-5/6 md:w-full p-2 rounded hover:cursor-pointer hover:bg-green-100">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
@@ -961,7 +961,7 @@
                             </div>
                         </div>
                         <div
-                            class="library-libraryItem libraryItem-song grid-song border-2 border-black w-5/6 md:w-full p-2 hover:cursor-pointer hover:bg-green-100">
+                            class="library-libraryItem libraryItem-song grid-song w-5/6 md:w-full p-2 rounded hover:cursor-pointer hover:bg-green-100">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
@@ -979,7 +979,7 @@
                             </div>
                         </div>
                         <div
-                            class="library-libraryItem libraryItem-song grid-song border-2 border-black w-5/6 md:w-full p-2 hover:cursor-pointer hover:bg-green-100">
+                            class="library-libraryItem libraryItem-song grid-song w-5/6 md:w-full p-2 rounded hover:cursor-pointer hover:bg-green-100">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
@@ -997,7 +997,7 @@
                             </div>
                         </div>
                         <div
-                            class="library-libraryItem libraryItem-song grid-song border-2 border-black w-5/6 md:w-full p-2 hover:cursor-pointer hover:bg-green-100">
+                            class="library-libraryItem libraryItem-song grid-song w-5/6 md:w-full p-2 rounded hover:cursor-pointer hover:bg-green-100">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
