--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
+        <!-- <script
+            src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+            crossorigin="anonymous"></script> -->
         <script src="style.css"></script>
         <title>VinylMusic</title>
     </head>
@@ -939,83 +943,9 @@
                 </div>
 
                 <!-- 4.a.i song grid -->
-                <div id="song-grid" class="hidden">
-                    <div
-                        class="library-grid grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-8 gap-x-4 gap-y-2 lg:gap-y-8">
-                        <div
-                            class="library-libraryItem libraryItem-song grid-song w-5/6 md:w-full p-2 rounded hover:cursor-pointer hover:bg-green-100">
-                            <img
-                                src="/assets/song-cover.jpg"
-                                alt="Album cover"
-                                class="library-libraryItem-cover hidden md:block w-full mb-4 rounded" />
-                            <div
-                                class="library-libraryItem-label w-11/12 whitespace-nowrap">
-                                <p
-                                    class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
-                                    Title
-                                </p>
-                                <p
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg text-ellipsis overflow-hidden">
-                                    Artist
-                                </p>
-                            </div>
-                        </div>
-                        <div
-                            class="library-libraryItem libraryItem-song grid-song w-5/6 md:w-full p-2 rounded hover:cursor-pointer hover:bg-green-100">
-                            <img
-                                src="/assets/song-cover.jpg"
-                                alt="Album cover"
-                                class="library-libraryItem-cover hidden md:block w-full mb-4 rounded" />
-                            <div
-                                class="library-libraryItem-label w-11/12 whitespace-nowrap">
-                                <p
-                                    class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
-                                    Title
-                                </p>
-                                <p
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg text-ellipsis overflow-hidden">
-                                    Artist
-                                </p>
-                            </div>
-                        </div>
-                        <div
-                            class="library-libraryItem libraryItem-song grid-song w-5/6 md:w-full p-2 rounded hover:cursor-pointer hover:bg-green-100">
-                            <img
-                                src="/assets/song-cover.jpg"
-                                alt="Album cover"
-                                class="library-libraryItem-cover hidden md:block w-full mb-4 rounded" />
-                            <div
-                                class="library-libraryItem-label w-11/12 whitespace-nowrap">
-                                <p
-                                    class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
-                                    Title
-                                </p>
-                                <p
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg text-ellipsis overflow-hidden">
-                                    Artist
-                                </p>
-                            </div>
-                        </div>
-                        <div
-                            class="library-libraryItem libraryItem-song grid-song w-5/6 md:w-full p-2 rounded hover:cursor-pointer hover:bg-green-100">
-                            <img
-                                src="/assets/song-cover.jpg"
-                                alt="Album cover"
-                                class="library-libraryItem-cover hidden md:block w-full mb-4 rounded" />
-                            <div
-                                class="library-libraryItem-label w-11/12 whitespace-nowrap">
-                                <p
-                                    class="libraryItem-labelTitle text-base md:text-lg lg:text-xl !leading-4">
-                                    Title
-                                </p>
-                                <p
-                                    class="libraryItem-labelArtist text-sm md:text-base lg:text-lg text-ellipsis overflow-hidden">
-                                    Artist
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div
+                    id="song-grid"
+                    class="hidden grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-8 gap-x-4 gap-y-2 lg:gap-y-8 py-2"></div>
 
                 <!-- 4.a.ii playlists Page -->
                 <div id="playlists-subsection" class="hidden">
@@ -1130,5 +1060,7 @@
         </div>
 
         <script src="script.js"></script>
+        <script src="populate.js"></script>
+        <script src="select.js"></script>
     </body>
 </html>
