--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
         <script src="https://unpkg.com/feather-icons"></script>
+        <link rel="stylesheet" href="style.css" />
         <title>VinylMusic</title>
     </head>
     <body class="bg-gray-300">
@@ -43,16 +44,12 @@
                             class="rounded-full player-rotation" />
                     </div>
                     <!-- volume bar -->
-                    <div
-                        id="player-volume-bar"
-                        class="w-2 rounded-full bg-zinc-300 inline flex flex-col justify-end">
-                        <div
-                            id="player-volume-bar-slider"
-                            class="w-2 bg-black rounded-full h-1/3">
-                            <div
-                                id="player-volume-bar-slider-circle"
-                                class="bg-zinc-500 w-4 h-4 rounded-full absolute -m-1"></div>
-                        </div>
+
+                    <div class="flex flex-col">
+                        <input
+                            type="range"
+                            id="player-volume-bar"
+                            class="h-full" />
                         <div class="absolute -my-6 -mx-1">
                             <svg height="1em" viewBox="0 0 448 512">
                                 <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
