--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
         <script src="style.css"></script>
+        <script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script>
         <title>VinylMusic</title>
     </head>
     <body>
@@ -49,7 +50,7 @@
 
                     <!--Queued Songs-->
                     <div class="flex flex-row">
-                        <div class="w-full ml-4 mr-4">
+                        <div id="queued-songs-container" class="w-full ml-4 mr-4">
                             <!-- Queued Songs Container -->
                             <div >
                                 <!-- Song Boxes -->
