--- a/queueMore.html
+++ b/queueMore.html
@@ -4,6 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script>
         <title>QueuePage</title>
     </head>
     <body> 
@@ -31,7 +32,7 @@
 
             <!--Queued Songs-->
             <div class="flex flex-row">
-                <div class="w-full ml-4 mr-4">
+                <div id="queued-songs-container" class="w-full ml-4 mr-4">
                     <!-- Queued Songs Container -->
                     <div >
                         <!-- Song Boxes -->
@@ -44,9 +45,9 @@
                     </button>
                 </div>
             </div>
-
-           
         </div>
+            
+    </body>
     <script src="queue.js"></script>
 </html>
 
